feat: add ef, medicinecontext and medicine

--- a/Backend/Vetproject/appsettings.json
+++ b/Backend/Vetproject/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1500;Persist Security Info=False;User ID=SA;Password=VetProject2024;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=300"
+  },
+  
   "AllowedHosts": "*"
 }
