--- a/Backend/Vetproject/appsettings.json
+++ b/Backend/Vetproject/appsettings.json
@@ -7,7 +7,8 @@
   },
   
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Persist Security Info=False;User ID=SA;Password=VetProject2024;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=300"
+    "DefaultConnection": "Server=localhost,1433;Database=vetproject;Persist Security Info=False;User ID=SA;Password=VetProject2024;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=300;Initial Catalog=vetproject"
+
   },
   
   "AllowedHosts": "*"
